[package]
name = "rns-mavlink"
description = "Reticulum Mavlink bridge"
version = "0.1.0"
license = "MIT"

[dependencies]
clap = { version = "=4.4.*", features= ["derive"] }
env_logger = "0.11.*"
log = "0.4.*"
reticulum = "0.1.*"
serde = { version = "1.*", features = ["derive"] }
tokio-serial = "5.*"
tokio = { version = "1.*", features = ["full"] }
toml = "0.8.*"
# the following dependencies are here to pin versions to be compatible with Rust 1.75.0
ed25519-dalek = "=2.1.*"
base64ct = "=1.6.*"
