[package]
name = "rns-mavlink"
description = "Reticulum Mavlink bridge"
version = "0.1.1"
license = "MIT"
edition = "2024"

[dependencies]
clap = { version= "4.*", features= ["derive"] }
env_logger = "0.11.*"
log = "0.4.*"
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
tokio-serial = "5.*"
tokio = { version = "1.*", features = ["full"] }
toml = "0.8.*"

[dependencies.reticulum]
git = "https://github.com/BeechatNetworkSystemsLtd/Reticulum-rs"
#git = "https://github.com/spearman/Reticulum-rs"
#path = "/home/spearman/rs/remote/Reticulum-rs"
branch = "fix-retransmit-announces"
version = "0.1.*"
