[package]
name = "rns-mavlink"
description = "Reticulum Mavlink bridge"
version = "0.1.1"
license = "MIT"
edition = "2024"

[dependencies]
clap = { version= "4.*", features= ["derive"] }
env_logger = "0.11.*"
log = "0.4.*"
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
tokio = { version = "1.*", features = ["full"] }
tokio-serial = "5.*"
tokio-util = "0.7.*"
toml = "0.8.*"

[dependencies.kaonic-ctrl]
git = "https://github.com/BeechatNetworkSystemsLtd/kaonic-radio"
version = "0.1.*"

[dependencies.kaonic-reticulum]
git = "https://github.com/BeechatNetworkSystemsLtd/kaonic-gateway"
version = "0.1.*"

[dependencies.radio-common]
git = "https://github.com/BeechatNetworkSystemsLtd/kaonic-radio"
version = "0.1.*"

[dependencies.reticulum]
git = "https://github.com/BeechatNetworkSystemsLtd/Reticulum-rs"
version = "0.1.*"
